// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Expeneses summary componentes with no data 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expeneses
     totalling 
    $0.00
  </h1>
</div>
`;

exports[`Should render ExpensesSummary component correctly 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expeneses
     totalling 
    $1,141.95
  </h1>
</div>
`;
